--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TRILOCHAN DASH</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- AOS Animation CSS -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
   <script src="https://cdn.tailwindcss.com"></script>
     <style>
     html {
@@ -101,11 +104,18 @@ navLinks.forEach(link => {
 </script>
 <!-- Hero Section with Circular Image and Social Icons (Responsive) -->
 <section class="bg-blue-900 text-white py-16">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-10 lg:px-24 grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-10 lg:px-24 flex flex-col items-center text-center">
     
+    <!-- Circular Image Section (at top) -->
+    <div class="mb-8">
+      <div class="w-60 h-60 sm:w-72 sm:h-72 md:w-80 md:h-80 rounded-full overflow-hidden shadow-lg">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSr1WI3ZXg1bKhfKOAAUopYKjmDizrOaxIpA&s" alt="Hero" class="w-full h-full object-cover" />
+      </div>
+    </div>
+
     <!-- Text Section -->
-    <div class="text-center md:text-left">
-      <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6">Empowering Change</h1>
+    <div>
+      <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-6">TRILOCHAN DASH</h1>
       <p class="text-base sm:text-lg mb-6">Through education and community service, we're building a better tomorrow with passion and purpose.</p>
 
       <!-- Learn More Button -->
@@ -114,7 +124,7 @@ navLinks.forEach(link => {
       <!-- Social Media Label and Icons -->
       <div class="mt-6">
         <p class="font-semibold mb-2">Follow me on:</p>
-        <div class="flex justify-center md:justify-start gap-4">
+        <div class="flex justify-center gap-4">
           <a href="#" class="text-white text-2xl hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="text-white text-2xl hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
           <a href="#" class="text-white text-2xl hover:text-gray-300 transition"><i class="fab fa-youtube"></i></a>
@@ -122,24 +132,56 @@ navLinks.forEach(link => {
       </div>
     </div>
 
-    <!-- Circular Image Section -->
-    <div class="flex justify-center md:justify-end">
+  </div>
+</section>
+
+<!-- About Section with Image Left and Details Right -->
+<section id="about" class="py-20 bg-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center gap-10">
+
+    <!-- Image Section -->
+    <div class="w-full md:w-1/2 flex justify-center">
       <div class="w-60 h-60 sm:w-72 sm:h-72 md:w-80 md:h-80 rounded-full overflow-hidden shadow-lg">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSr1WI3ZXg1bKhfKOAAUopYKjmDizrOaxIpA&s" alt="Hero" class="w-full h-full object-cover" />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSr1WI3ZXg1bKhfKOAAUopYKjmDizrOaxIpA&s" alt="Founder" class="w-full h-full object-cover" />
+      </div>
+    </div>
+
+    <!-- Text Section -->
+    <div class="w-full md:w-1/2 text-center md:text-left">
+      <h2 class="text-4xl font-bold text-blue-900 mb-6">About the Founder</h2>
+      <p class="text-lg text-gray-700 mb-4">
+        With over a decade of dedication to education and community welfare, our founder has established a reputation for impactful leadership and selfless service. The mission is to empower youth, uplift marginalized groups, and promote values that transform lives through education and outreach.
+      </p>
+
+    <!-- Personal Details in 2 Columns -->
+<div class="text-gray-800 mt-6 grid grid-cols-1 sm:grid-cols-2 gap-6 text-left">
+  <!-- Left Column -->
+  <div class="space-y-2">
+    <p><span class="font-semibold text-blue-900">Name:</span> Trilochan Dash</p>
+    <p><span class="font-semibold text-blue-900">Date of Birth:</span> 15th August 1985</p>
+    <p><span class="font-semibold text-blue-900">Address:</span> Bhadrak, Odisha, India</p>
+  </div>
+
+  <!-- Right Column -->
+  <div class="space-y-2">
+    <p><span class="font-semibold text-blue-900">Qualification:</span> BCom</p>
+    <p><span class="font-semibold text-blue-900">Email:</span> trilochandash@example.com</p>
+    <p><span class="font-semibold text-blue-900">Mobile No.:</span> +91 9876543210</p>
+  </div>
+</div>
+
+
+      <!-- WhatsApp Button -->
+      <div class="mt-6">
+        <a href="https://wa.me/919876543210" target="_blank" class="inline-block bg-green-500 text-white px-6 py-3 rounded-full font-semibold shadow hover:bg-green-600 transition">
+          Connect Me on WhatsApp
+        </a>
       </div>
     </div>
 
   </div>
 </section>
 
-  <!-- About Section (Text Only) -->
-  <section id="about" class="py-20 bg-white">
-    <div class="max-w-4xl mx-auto px-4 text-center">
-      <h2 class="text-4xl font-bold text-blue-900 mb-6">About the Founder</h2>
-      <p class="text-lg text-gray-700 mb-4">With over a decade of dedication to education and community welfare, our founder has established a reputation for impactful leadership and selfless service.</p>
-      <p class="text-lg text-gray-700">The mission is to empower youth, uplift marginalized groups, and promote values that transform lives through education and outreach.</p>
-    </div>
-  </section>
 
 <!-- NGO & Institute Section -->
 <section id="initiatives" class="py-20 bg-gray-100">
@@ -215,74 +257,111 @@ navLinks.forEach(link => {
   </div>
 </section>
 
+<!-- Stats Section -->
+<section id="impact" class="bg-white py-20">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-4xl font-bold text-center text-blue-900 mb-12">Our Impact</h2>
+    <div class="grid md:grid-cols-4 sm:grid-cols-2 gap-6 text-center">
 
-  <!-- Stats Section -->
-  <section id="impact" class="bg-white py-20">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center text-blue-900 mb-12">Our Impact</h2>
-      <div class="grid md:grid-cols-4 sm:grid-cols-2 gap-6 text-center">
-        <div class="p-6 bg-blue-100 rounded-xl shadow">
-          <h3 class="text-3xl font-bold text-blue-900">150+</h3>
-          <p class="mt-2 text-gray-700">Scholarships Given</p>
-        </div>
-        <div class="p-6 bg-green-100 rounded-xl shadow">
-          <h3 class="text-3xl font-bold text-green-900">30K+</h3>
-          <p class="mt-2 text-gray-700">Lives Impacted</p>
-        </div>
-        <div class="p-6 bg-yellow-100 rounded-xl shadow">
-          <h3 class="text-3xl font-bold text-yellow-800">120+</h3>
-          <p class="mt-2 text-gray-700">Health Camps</p>
-        </div>
-        <div class="p-6 bg-purple-100 rounded-xl shadow">
-          <h3 class="text-3xl font-bold text-purple-900">18</h3>
-          <p class="mt-2 text-gray-700">Years of Service</p>
-        </div>
+      <!-- Card 1 -->
+      <div class="p-6 bg-blue-100 rounded-xl shadow transition-transform transform hover:scale-105 hover:shadow-xl hover:bg-blue-200 duration-300">
+        <h3 class="text-3xl font-bold text-blue-900 group-hover:text-blue-800">150+</h3>
+        <p class="mt-2 text-gray-700">Scholarships Given</p>
       </div>
+
+      <!-- Card 2 -->
+      <div class="p-6 bg-green-100 rounded-xl shadow transition-transform transform hover:scale-105 hover:shadow-xl hover:bg-green-200 duration-300">
+        <h3 class="text-3xl font-bold text-green-900">30K+</h3>
+        <p class="mt-2 text-gray-700">Lives Impacted</p>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="p-6 bg-yellow-100 rounded-xl shadow transition-transform transform hover:scale-105 hover:shadow-xl hover:bg-yellow-200 duration-300">
+        <h3 class="text-3xl font-bold text-yellow-800">120+</h3>
+        <p class="mt-2 text-gray-700">Health Camps</p>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="p-6 bg-purple-100 rounded-xl shadow transition-transform transform hover:scale-105 hover:shadow-xl hover:bg-purple-200 duration-300">
+        <h3 class="text-3xl font-bold text-purple-900">18</h3>
+        <p class="mt-2 text-gray-700">Years of Service</p>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Timeline Section -->
-  <section id="timeline" class="py-20 bg-gray-100">
-    <div class="max-w-3xl mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center text-blue-900 mb-12">Milestones</h2>
-      <div class="relative border-l-4 border-blue-900 pl-6 space-y-10">
-        <div>
-          <h3 class="text-xl font-bold text-blue-900">2008 – NGO Foundation</h3>
-          <p class="text-gray-700">Launched with 5 volunteers and a vision to serve rural India.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-bold text-blue-900">2014 – Education Programs</h3>
-          <p class="text-gray-700">Opened first after-school center for slum children.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-bold text-blue-900">2019 – Digital Expansion</h3>
-          <p class="text-gray-700">Adopted hybrid learning tools and remote education services.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-bold text-blue-900">2023 – 30K Lives Reached</h3>
-          <p class="text-gray-700">Surpassed 30,000+ direct beneficiaries across 4 states.</p>
-        </div>
+<section id="timeline" class="py-20 bg-gray-100">
+  <div class="max-w-3xl mx-auto px-4">
+    <h2 class="text-4xl font-bold text-center text-blue-900 mb-12" data-aos="fade-up">Milestones</h2>
+    <div class="relative border-l-4 border-blue-900 pl-6 space-y-10">
+      <div data-aos="fade-right">
+        <h3 class="text-xl font-bold text-blue-900">2008 – NGO Foundation</h3>
+        <p class="text-gray-700">Launched with 5 volunteers and a vision to serve rural India.</p>
+      </div>
+      <div data-aos="fade-left">
+        <h3 class="text-xl font-bold text-blue-900">2014 – Education Programs</h3>
+        <p class="text-gray-700">Opened first after-school center for slum children.</p>
+      </div>
+      <div data-aos="fade-right">
+        <h3 class="text-xl font-bold text-blue-900">2019 – Digital Expansion</h3>
+        <p class="text-gray-700">Adopted hybrid learning tools and remote education services.</p>
+      </div>
+      <div data-aos="fade-left">
+        <h3 class="text-xl font-bold text-blue-900">2023 – 30K Lives Reached</h3>
+        <p class="text-gray-700">Surpassed 30,000+ direct beneficiaries across 4 states.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Gallery Section -->
-  <section id="gallery" class="py-20 bg-blue-900">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center text-white mb-12">Gallery</h2>
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-          <img src="https://utkalfoundation.in/images/IMG-20220415-WA0017.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover" />
-        </div>
-        <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-          <img src="https://utkalfoundation.in/images/IMG_20211218_1615381.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover" />
-        </div>
-        <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-          <img src="https://utkalfoundation.in/images/IMG_20220508_1726361.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover" />
-        </div>
+<!-- AOS Animation JS -->
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    once: true
+  });
+</script>
+
+<!-- Gallery Section -->
+<section id="gallery" class="py-20 bg-blue-900">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-4xl font-bold text-center text-white mb-12">Gallery</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG-20220415-WA0017.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG_20211218_1615381.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG_20220508_1726361.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG_20211218_160236.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG-20211215-WA0008.jpg" alt="Gallery Image 5" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG-20220414-WA0037.jpg" alt="Gallery Image 6" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG-20220416-WA0041.jpg" alt="Gallery Image 7" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG_20211218_154007.jpg" alt="Gallery Image 8" class="w-full h-60 object-cover" />
+      </div>
+      <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <img src="https://utkalfoundation.in/images/IMG-20211218-WA0016.jpg" alt="Gallery Image 9" class="w-full h-60 object-cover" />
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 bg-gray-100">
