--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
   <div class="space-y-2">
     <p><span class="font-semibold text-blue-900">Qualification:</span> BCom</p>
     <p><span class="font-semibold text-blue-900">Email:</span> trilochandash@example.com</p>
-    <p><span class="font-semibold text-blue-900">Mobile No.:</span> +91 9876543210</p>
+    <p><span class="font-semibold text-blue-900">Mobile No.:</span> +91 8984805015 or +91 9438813002</p>
   </div>
 </div>
 
@@ -221,29 +221,35 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
     <!-- Biography Content -->
     <div class="text-lg text-gray-700 leading-relaxed space-y-6 bg-white/70 backdrop-blur-sm p-8 rounded-2xl shadow-xl">
       <p>
-        My journey has been defined by a passion for <span class="font-semibold text-blue-700">education, innovation, and community service</span>. 
-        From an early stage in life, I embraced the values of leadership and compassion, driven by the belief that knowledge 
-        and empathy can change lives. This philosophy has guided me in creating impactful initiatives that bring people together 
-        and strengthen society.
-      </p>
+  I am <span class="font-semibold text-blue-700">Trilochan Dash</span>, born in <span class="italic text-blue-800">1988 in West Bengal</span>. 
+  I am the son of Late Nirakar Dash and I come from a poor family. My childhood was full of struggles, 
+  but I never gave up on my dreams. With dedication and hard work, I continued my education and built my career step by step. 
+</p>
 
-      <p>
-        Over the years, I have founded and led organizations dedicated to <span class="italic text-blue-800">digital literacy, skill development, 
-        youth empowerment, and social responsibility</span>. These initiatives have not only created opportunities but also 
-        built lasting frameworks of growth and sustainability for future generations.
-      </p>
+<p>
+  In <span class="font-semibold text-blue-700">2014</span>, I started the <span class="italic text-blue-800">Utkal Computer Academy</span> 
+  to provide modern education to children and youth. Today, it is still running and guiding many students. 
+  My faith in God and my wish to serve society inspired me to do more. 
+  This is how I created the <span class="font-semibold text-blue-700">Utkal Foundation Trust</span>, 
+  through which I try to help people in need. Along with my social work, I also work in the 
+  <span class="italic text-blue-800">Administrative Department of Nalanda Institute</span>. 
+  Managing both work and service is not easy, but it gives me happiness.
+</p>
 
-      <p>
-        Today, my vision continues to be shaped by the belief that <span class="font-semibold text-blue-700">true leadership lies in service</span>. 
-        Every project, training program, and campaign I have undertaken has been a step toward empowering individuals, 
-        nurturing talent, and creating a society that thrives on collective progress and innovation.
-      </p>
+<p>
+  Over time, I have received many awards for my work. I take them as blessings from God 
+  and encouragement to do better. My life journey from poverty to service has taught me 
+  the value of <span class="font-semibold text-blue-700">hard work, honesty, and kindness</span>. 
+  I believe that if we have courage and patience, nothing is impossible. 
+  My mission is to keep serving people and spreading knowledge for a better society.
+</p>
+
     </div>
 
     <!-- Closing Note -->
     <div class="text-center mt-10">
       <p class="text-2xl font-bold text-blue-900 italic">“Empowering people is the first step to transforming society.”</p>
-      <p class="text-sm text-gray-500 mt-2">– Your Name</p>
+      <p class="text-sm text-gray-500 mt-2">– Trilochan Dash</p>
     </div>
 
   </div>
@@ -377,7 +383,7 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
           <div class="flex space-x-4 text-blue-600 text-xl">
             <a href="https://www.facebook.com/share/1JnhY2a6Td/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/utkaltrust?igsh=MTZxbDdxcXA4OGN4cw==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://youtube.com/@utkalfoundation?si=jl_v4P-IVbxEMV8g" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="#" target="_blank"><i class="fab fa-x-twitter"></i></a> <!-- Or fa-x-twitter -->
           </div>
           <!-- Website Icon -->
@@ -608,8 +614,8 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
     <div class="grid md:grid-cols-2 gap-8">
 
       <!-- Award Card 1 -->
-      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('certificate1.jpg')">
-        <img src="certificate1.jpg" alt="Karmaveer Sanman" class="w-full h-64 object-cover">
+      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('/assets/images/awards/karmaveer.jpg')">
+        <img src="/assets/images/awards/karmaveer.jpg" alt="Karmaveer Sanman" class="w-full h-64 object-cover">
         <div class="absolute bottom-0 right-0 bg-blue-900 bg-opacity-80 text-white p-4 rounded-tl-xl">
           <h3 class="text-lg font-semibold">🏆 Karmaveer Sanman</h3>
           <p class="text-sm">Cuttack</p>
@@ -617,8 +623,8 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
       </div>
 
       <!-- Award Card 2 -->
-      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('certificate2.jpg')">
-        <img src="certificate2.jpg" alt="Seba Mitra Sanman" class="w-full h-64 object-cover">
+      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('/assets/images/awards/sebamitra.jpg')">
+        <img src="/assets/images/awards/sebamitra.jpg" alt="Seba Mitra Sanman" class="w-full h-64 object-cover">
         <div class="absolute bottom-0 right-0 bg-blue-900 bg-opacity-80 text-white p-4 rounded-tl-xl">
           <h3 class="text-lg font-semibold">🏆 Seba Mitra Sanman</h3>
           <p class="text-sm">Samparak Charitable Trust</p>
@@ -626,8 +632,8 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
       </div>
 
       <!-- Award Card 3 -->
-      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('certificate3.jpg')">
-        <img src="certificate3.jpg" alt="Utkarsh Seva Sanman" class="w-full h-64 object-cover">
+      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('/assets/images/awards/utkarsha.jpg')">
+        <img src="/assets/images/awards/utkarsha.jpg" alt="Utkarsh Seva Sanman" class="w-full h-64 object-cover">
         <div class="absolute bottom-0 right-0 bg-blue-900 bg-opacity-80 text-white p-4 rounded-tl-xl">
           <h3 class="text-lg font-semibold">🏆 Utkarsh Seva Sanman</h3>
           <p class="text-sm">Maa Mangala Charitable Trust</p>
@@ -635,8 +641,8 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
       </div>
 
       <!-- Award Card 4 -->
-      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('certificate4.jpg')">
-        <img src="certificate4.jpg" alt="Utkal Gourab Seva Sanman" class="w-full h-64 object-cover">
+      <div class="relative rounded-xl overflow-hidden shadow-lg cursor-pointer" onclick="openModal('/assets/images/awards/utkalgouraba.jpeg')">
+        <img src="/assets/images/awards/utkalgouraba.jpeg" alt="Utkal Gourab Seva Sanman" class="w-full h-64 object-cover">
         <div class="absolute bottom-0 right-0 bg-blue-900 bg-opacity-80 text-white p-4 rounded-tl-xl">
           <h3 class="text-lg font-semibold">🏆 Utkal Gourab Seva Sanman</h3>
           <p class="text-sm">Lovestar Social Work Trust</p>
@@ -681,22 +687,22 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
         <img src="https://utkalfoundation.in/images/IMG_20220508_1726361.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG_20211218_160236.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/AboutPage/Image/achive-2.jpeg" alt="Gallery Image 4" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG-20211215-WA0008.jpg" alt="Gallery Image 5" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/AboutPage/Image/achive-1.jpg" alt="Gallery Image 5" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG-20220414-WA0037.jpg" alt="Gallery Image 6" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/AboutPage/Image/achive-10.jpg" alt="Gallery Image 6" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG-20220416-WA0041.jpg" alt="Gallery Image 7" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/gallery-page/Gallery-Image/24.webp" alt="Gallery Image 7" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG_20211218_154007.jpg" alt="Gallery Image 8" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/gallery-page/Gallery-Image/1.webp" alt="Gallery Image 8" class="w-full h-60 object-cover" />
       </div>
       <div class="overflow-hidden rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <img src="https://utkalfoundation.in/images/IMG-20211218-WA0016.jpg" alt="Gallery Image 9" class="w-full h-60 object-cover" />
+        <img src="https://utkalfoundationupdate.netlify.app/src/pages/gallery-page/Gallery-Image/2.webp" alt="Gallery Image 9" class="w-full h-60 object-cover" />
       </div>
     </div>
   </div>
@@ -739,15 +745,16 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
     <!-- Contact Info + Social Icons -->
     <div>
       <h3 class="font-bold text-lg mb-2">Contact Info</h3>
-      <p class="text-sm">Email: example@ngo.org</p>
-      <p class="text-sm mb-4">Phone: +91 9876543210</p>
+      <p class="text-sm">Email: utkalfoundationtrust@gmail.com</p>
+      <p class="text-sm ">Phone: +91 9438813002</p>
+      <p class="text-sm mb-2 ml-11">   +91 8984805015</p>
 
       <!-- Social Media Icons -->
       <p class="font-semibold mb-2">Follow me on:</p>
       <div class="flex justify-center md:justify-start gap-4 text-2xl">
         <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-youtube"></i></a>
+        <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
       </div>
     </div>
 
