--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ navLinks.forEach(link => {
       <div class="pt-4">
         <p class="text-sm text-blue-200 mb-2">Connect with me:</p>
         <div class="flex gap-5 justify-center md:justify-start text-2xl">
-          <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.facebook.com/share/1AtSFKtwbe/" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
           <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
@@ -180,15 +180,17 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
   <!-- Left Column -->
   <div class="space-y-2">
     <p><span class="font-semibold text-blue-900">Name:</span> Trilochan Dash</p>
-    <p><span class="font-semibold text-blue-900">Date of Birth:</span> 15th August 1988</p>
+    <p><span class="font-semibold text-blue-900">Date of Birth:</span> 25th April 1988</p>
     <p><span class="font-semibold text-blue-900">Address:</span> Bhadrak, Odisha, India</p>
   </div>
 
   <!-- Right Column -->
   <div class="space-y-2">
     <p><span class="font-semibold text-blue-900">Qualification:</span> BCom</p>
-    <p><span class="font-semibold text-blue-900">Email:</span> trilochandash@example.com</p>
-    <p><span class="font-semibold text-blue-900">Mobile No.:</span> +91 8984805015 or +91 9438813002</p>
+    <p><span class="font-semibold text-blue-900">Email:</span> trilochan656@gmail.com</p>
+    <p><span class="font-semibold text-blue-900">Mobile No.:</span> +91 9853172579 or </p>
+    <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;      +91 9438813002</p>
   </div>
 </div>
 
@@ -745,16 +747,16 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
     <!-- Contact Info + Social Icons -->
     <div>
       <h3 class="font-bold text-lg mb-2">Contact Info</h3>
-      <p class="text-sm">Email: utkalfoundationtrust@gmail.com</p>
-      <p class="text-sm ">Phone: +91 9438813002</p>
-      <p class="text-sm mb-2 ml-11">   +91 8984805015</p>
+      <p class="text-sm">Email:  trilochan656@gmail.com</p>
+      <p class="text-sm ">Phone: +91 9853172579</p>
+      <p class="text-sm mb-2 ml-11">   +91 9438813002</p>
 
       <!-- Social Media Icons -->
       <p class="font-semibold mb-2">Follow me on:</p>
       <div class="flex justify-center md:justify-start gap-4 text-2xl">
-        <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://www.facebook.com/share/1AtSFKtwbe/" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
+        <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
       </div>
     </div>
 
