--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ navLinks.forEach(link => {
       <div class="pt-4">
         <p class="text-sm text-blue-200 mb-2">Connect with me:</p>
         <div class="flex gap-5 justify-center md:justify-start text-2xl">
-          <a href="https://www.facebook.com/share/1AtSFKtwbe/" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
-          <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
-          <a href="#" class="hover:text-gray-300 transition"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.facebook.com/share/1AtSFKtwbe/" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
+          <a href="#" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
     </div>
@@ -754,9 +754,9 @@ I also proudly serve in the <b>Department of Administration</b> at <b>Nalanda Bh
       <!-- Social Media Icons -->
       <p class="font-semibold mb-2">Follow me on:</p>
       <div class="flex justify-center md:justify-start gap-4 text-2xl">
-        <a href="https://www.facebook.com/share/1AtSFKtwbe/" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
-        <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://www.facebook.com/share/1AtSFKtwbe/" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/trilochand986?igsh=end1NmR1ZzN6Y2pn" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-instagram"></i></a>
+        <a href="https://x.com/trilochand986?t=WxIU_VE2QYUBAAgt07VO9A&s=09" target="_blank" class="hover:text-gray-300 transition"><i class="fab fa-x-twitter"></i></a>
       </div>
     </div>
 
